# spatiad

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-label-guard.yml  publish-sdk.yml  release.yml
.husky/: commit-msg  pre-push
deploy/: docker-compose.postgres.yml  docker-compose.yml
deploy/kubernetes/: deployment.yaml
deploy/systemd/: spatiad.service
docs/: API_HTTP.md  CONFIG.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  OPERATIONS_RUNBOOK.md  PUBLISHING.md  SECURITY.md  STATE_MACHINE.md  TROUBLESHOOTING.md  WS_PROTOCOL.md
go/spatiad/: client.go  go.mod  types.go
java/spatiad-sdk/: pom.xml
java/spatiad-sdk/src/main/java/com/spatiad/sdk/: Coordinates.java  CreateOfferRequest.java  CreateOfferResponse.java  GetJobEventsRequest.java  JobEvent.java  JobEventsResponse.java  JobStatusResponse.java  SpatiadApiError.java  SpatiadClient.java  UpsertDriverRequest.java
k8s/: deployment.yaml
kotlin/spatiad-sdk/: build.gradle.kts
kotlin/spatiad-sdk/src/main/kotlin/com/spatiad/sdk/: Models.kt  SpatiadApiError.kt  SpatiadClient.kt
python/: pyproject.toml
python/spatiad/: __init__.py  client.py  errors.py  types.py
rust/: Cargo.toml
rust/crates/spatiad-api/: Cargo.toml
rust/crates/spatiad-api/src/: lib.rs  validation.rs
rust/crates/spatiad-api/tests/: integration_tests.rs
rust/crates/spatiad-bin/: Cargo.toml
rust/crates/spatiad-bin/src/: main.rs
rust/crates/spatiad-core/: Cargo.toml  README.md
rust/crates/spatiad-core/src/: lib.rs
rust/crates/spatiad-dispatch/: Cargo.toml
rust/crates/spatiad-dispatch/src/: eta.rs  lib.rs  scoring.rs
rust/crates/spatiad-h3/: Cargo.toml
rust/crates/spatiad-h3/src/: lib.rs
rust/crates/spatiad-storage/: Cargo.toml
rust/crates/spatiad-storage/src/: lib.rs  pg.rs  sqlite.rs
rust/crates/spatiad-types/: Cargo.toml
rust/crates/spatiad-types/src/: lib.rs
rust/crates/spatiad-ws/: Cargo.toml
rust/crates/spatiad-ws/src/: lib.rs
rust/crates/spatiad-zones/: Cargo.toml
rust/crates/spatiad-zones/src/: lib.rs
swift/SpatiadSDK/: Package.swift
swift/SpatiadSDK/Sources/SpatiadSDK/: Models.swift  SpatiadApiError.swift  SpatiadClient.swift
typescript/: package.json  pnpm-lock.yaml  tsconfig.base.json
typescript/examples/ride-dispatch/: package.json  tsconfig.json
typescript/examples/ride-dispatch/src/: index.ts
