[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatiad"
version = "0.1.0"
description = "Python SDK for the Spatiad spatial dispatch engine"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "mypy>=1.0",
]
