[package]
name = "spatiad-dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde_json.workspace = true
spatiad-core = { path = "../spatiad-core" }
spatiad-types = { path = "../spatiad-types" }
spatiad-zones = { path = "../spatiad-zones" }
thiserror.workspace = true
uuid.workspace = true
